--- a/templates/index.html
+++ b/templates/index.html
@@ -37,7 +37,7 @@
         -o-transition: all 0.5s ease-in-out;
         transition: all 0.5s ease-in-out;
     }
-    .scrollUpBotton.show {
+    #scrollUpBotton .show {
         visibility:visible;
         cursor:pointer;
         opacity: 1.0;
@@ -46,7 +46,7 @@
     <script type="text/javascript">
     $(document).ready(function(){
 	//Click event to scroll to top
-	$('.scrollUpButton').click(function(){
+	$('#scrollUpButton').click(function(){
 		$('html, body').animate({scrollTop : 0},800);
 		return false;
 	});
@@ -55,9 +55,9 @@
     $(function(){
             $(document).on( 'scroll', function(){
                 if ($(window).scrollTop() > 100) {
-                    $('.scroll-top-wrapper').addClass('show');
+                    $('#scrollUpButton').addClass('show');
                 } else {
-                    $('.scroll-top-wrapper').removeClass('show');
+                    $('#scrollUpButton').removeClass('show');
                 }
             });
         });
@@ -67,7 +67,7 @@
     </script>
 </head>
 <body style="background-color:#F8F8F8">
-    <a href="#" style="position: fixed; top: 3em; right: 11em; border: 0; z-index: 1040" title="Scroll up to top" class="scrollUpButton"><img alt="Scroll to top" src="http://www.mydrivenortheast.com/images/scroll.png" style="width:4em;"></a>
+    <a href="#" id="scrollUpButton" style="position: fixed; top: 3em; right: 11em; border: 0; z-index: 1040" title="Scroll up to top"><img alt="Scroll to top" src="http://www.mydrivenortheast.com/images/scroll.png" style="width:4em;"></a>
     <a href="https://github.com/ignaciouy/GCILeaderboard"><img style="position: fixed; top: 0; right: 0; border: 0; z-index: 1040" src="https://camo.githubusercontent.com/38ef81f8aca64bb9a64448d0d70f1308ef5341ab/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f6461726b626c75655f3132313632312e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png"></a>
     <nav class="navbar navbar-default navbar-fixed-top">
         <ul class="nav navbar-nav">
