--- a/templates/index.html
+++ b/templates/index.html
@@ -20,59 +20,57 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
     <link rel="stylesheet" id="font-awesome-css" href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" type="text/css" media="screen">
     <style>
-    #content{margin:5% 7% 2%;}
-
-    @media (max-width: 1400px){
-        #content{margin:10% 7% 2%;}
-        }
-
-    @media (max-width: 1280px){
-        #content{margin:15% 7% 2%;}
-        }
+    #content {
+        margin:5% 7% 2%;}
 
     .scrollUpButton{
-        -webkit-transition: all 0.5s ease-in-out;
-        -moz-transition: all 0.5s ease-in-out;
-        -ms-transition: all 0.5s ease-in-out;
-        -o-transition: all 0.5s ease-in-out;
-        transition: all 0.5s ease-in-out;
     }
-    #scrollUpBotton .show {
-        visibility:visible;
-        cursor:pointer;
-        opacity: 1.0;
-    }   
+    .back-to-top {
+        position: fixed;
+        bottom: 2em;
+        right: 0px;
+        text-decoration: none;
+        color: #000000;
+        background-color: rgba(235, 235, 235, 0.80);
+        font-size: 12px;
+        padding: 1em;
+        display: none;
+    }
+
+    .back-to-top:hover {
+        background-color: rgba(135, 135, 135, 0.50);
+    }
     </style>
     <script type="text/javascript">
     $(document).ready(function(){
 	//Click event to scroll to top
-	$('#scrollUpButton').click(function(){
-		$('html, body').animate({scrollTop : 0},800);
+	$('.back-to-top').click(function(){
+		$('html, body').animate({scrollTop : 0}, 800);
 		return false;
 	});
 
     });
-    $(function(){
-            $(document).on( 'scroll', function(){
-                if ($(window).scrollTop() > 100) {
-                    $('#scrollUpButton').addClass('show');
-                } else {
-                    $('#scrollUpButton').removeClass('show');
-                }
-            });
-        });
+
+    var offset = 300;
+    var duration = 800;
+    jQuery(window).scroll(function() {
+        if (jQuery(this).scrollTop() > offset) {
+            jQuery('.back-to-top').fadeIn(duration);
+        } else {
+            jQuery('.back-to-top').fadeOut(duration);
+        }
+    });
+
     {% block student_chart %}
 
     {% endblock %}
     </script>
 </head>
 <body style="background-color:#F8F8F8">
-    <a href="#" id="scrollUpButton" style="position: fixed; top: 3em; right: 11em; border: 0; z-index: 1040" title="Scroll up to top"><img alt="Scroll to top" src="http://www.mydrivenortheast.com/images/scroll.png" style="width:4em;"></a>
     <a href="https://github.com/ignaciouy/GCILeaderboard"><img style="position: fixed; top: 0; right: 0; border: 0; z-index: 1040" src="https://camo.githubusercontent.com/38ef81f8aca64bb9a64448d0d70f1308ef5341ab/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f6461726b626c75655f3132313632312e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png"></a>
     <nav class="navbar navbar-default navbar-fixed-top">
         <ul class="nav navbar-nav">
-            <li role="presentation"><a href="/" style="color:#000000">Home</a></li>
-            <li role="presentation"><a href="https://github.com/ignaciouy/GCILeaderboard" style="color:#000000">GitHub</a></li>
+            <li role="presentation"><a href="/" >Home</a></li>
             <li role="presentation"><a href="{{ url_for('allorgs') }}">All</a></li>
             <li role="presentation"><a href="{{ url_for('leaderboard', org='apertium') }}">Apertium</a></li>
             <li role="presentation"><a href="{{ url_for('leaderboard', org='brlcad') }}">BRL-CAD</a></li>
@@ -88,7 +86,8 @@
             <li role="presentation"><a href="{{ url_for('leaderboard', org='wikimedia') }}">Wikimedia</a></li>
         </ul>
     </nav>
-    <div id='content'>
+    <a href="#" class="back-to-top">Back to Top</a>
+        <div id='content'>
     {% block content %}
         <h1>Hi!</h1>
         This website is a per organization unofficial leaderboard for Google Code-In 2014. Click on your organization above.
