--- a/templates/all.html
+++ b/templates/all.html
@@ -41,7 +41,7 @@ function drawChart() {
 
 {% if not updating %}
 <button type="button" class="btn btn-default">
-    <a href="/update" style="text-decoration: none;">Update</a>
+    <a href="/update/org/all" style="text-decoration: none;">Update</a>
 </button>
 {% endif %}
 
