--- a/templates/org.html
+++ b/templates/org.html
@@ -48,7 +48,7 @@ function drawChart() {
 
 {% if not updating %}
 <button type="button" class="btn btn-default">
-    <a href="/update" style="text-decoration: none;">Update</a>
+    <a href="/update/org/{{ org }}" style="text-decoration: none;">Update</a>
 </button>
 {% endif %}
 
