--- a/templates/index.html
+++ b/templates/index.html
@@ -9,6 +9,10 @@
         Home
     {% endblock %} - Google Code-In Leaderboard
     </title>
+    <script>
+    if (window.location.protocol != "https:")
+          window.location.href = "https:" + window.location.href.substring(window.location.protocol.length);
+    </script>
 
     <meta name="Robots" content="follow, index" />
     <meta name="Description" content="{% block desc %}Visit this website and check Google Code-In 2014 unofficial leaderboard!{% endblock %}" />
