--- a/templates/index.html
+++ b/templates/index.html
@@ -18,7 +18,7 @@
     <meta name="Description" content="{% block desc %}Visit this website and check Google Code-In 2014 unofficial leaderboard!{% endblock %}" />
     <meta name="Keywords" content="gci, google code-in, leaderboard, fossasia, kde, drupal, mifos, copyleft games, brlcad, aperitum, haiku, openmrs, sugar, wikimedia, sahana eden" />
 
-    <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
+    <script src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/canvasjs/1.4.1/canvas.min.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
